# digit_recognizer

./: .gitignore  README.md
cpp_tensorRT/: CMakeLists.txt  alexnet.cc  alexnet.h  logging.h  main.cc  model.cc  model.h
cpp_tensorRT/utils/: data_loader.cc  data_loader.h  print_time.h
py_pytorch/: dataloader.py  gen_wts.py  main.py  model.py  pred_test.py  train.py  visualize.py
py_pytorch/model_weight/: gen_wts.py
